--- a/demo-mongodb/pom.xml
+++ b/demo-mongodb/pom.xml
@@ -3,38 +3,28 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>tk.gushizone</groupId>
+    
     <artifactId>demo-mongodb</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.6.RELEASE</version>
+        <groupId>tk.gushizone</groupId>
+        <artifactId>pom-spring-boot</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
+
     <properties>
         <java.version>1.8</java.version>
+        <mongodb.driver.version>3.6.4</mongodb.driver.version>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>
-
-
         <!-- mongodb-driver -->
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver</artifactId>
-            <version>3.6.4</version>
+            <version>${mongodb.driver.version}</version>
         </dependency>
-
 
         <!-- spring-data-mongodb -->
         <dependency>
