--- a/pom-common/pom.xml
+++ b/pom-common/pom.xml
@@ -7,6 +7,7 @@
     <groupId>tk.gushizone</groupId>
     <artifactId>pom-common</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <properties>
         <java.version>1.8</java.version>
