--- a/pom-spring-boot/pom.xml
+++ b/pom-spring-boot/pom.xml
@@ -7,6 +7,7 @@
     <groupId>tk.gushizone</groupId>
     <artifactId>pom-spring-boot</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
