--- a/pom-common/pom.xml
+++ b/pom-common/pom.xml
@@ -7,6 +7,7 @@
     <groupId>tk.gushizone</groupId>
     <artifactId>pom-common</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <properties>
         <java.version>1.8</java.version>
@@ -15,7 +16,8 @@
 
         <junit.version>4.12</junit.version>
         <lombok.version>1.18.6</lombok.version>
-        <logback.version>1.1.2</logback.version>
+        <logback.version>1.2.3</logback.version>
+        <commons.lang3.version>3.8.1</commons.lang3.version>
     </properties>
 
     <dependencyManagement>
@@ -34,6 +36,11 @@
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
                 <version>${logback.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons.lang3.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
