--- a/pom-spring-boot/pom.xml
+++ b/pom-spring-boot/pom.xml
@@ -20,6 +20,8 @@
         <java.version>1.8</java.version>
         <lombok.version>1.18.6</lombok.version>
         <commons.lang3.version>3.3.2</commons.lang3.version>
+        <commons.collections4.version>4.2</commons.collections4.version>
+        <guava.version>20.0</guava.version>
     </properties>
 
     <dependencies>
@@ -39,10 +41,23 @@
             <version>${lombok.version}</version>
         </dependency>
 
+        <!-- https://github.com/apache/commons-lang -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${commons.lang3.version}</version>
+        </dependency>
+        <!-- https://github.com/apache/commons-collections -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>${commons.collections4.version}</version>
+        </dependency>
+        <!--https://github.com/google/guava-->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
     </dependencies>
 
