--- a/demo-springmvc/pom.xml
+++ b/demo-springmvc/pom.xml
@@ -13,10 +13,20 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <commons.fileupload.version>1.3.1</commons.fileupload.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>${commons.fileupload.version}</version>
         </dependency>
     </dependencies>
 
