--- a/pom-common/pom.xml
+++ b/pom-common/pom.xml
@@ -18,6 +18,10 @@
         <lombok.version>1.18.6</lombok.version>
         <logback.version>1.2.3</logback.version>
         <commons.lang3.version>3.8.1</commons.lang3.version>
+
+        <jdom.version>2.0.6</jdom.version>
+        <dom4j.version>2.1.1</dom4j.version>
+        <jackson.version>2.10.0</jackson.version>
     </properties>
 
     <dependencyManagement>
