--- a/pom-spring-boot/pom.xml
+++ b/pom-spring-boot/pom.xml
@@ -21,7 +21,15 @@
         <lombok.version>1.18.6</lombok.version>
         <commons.lang3.version>3.3.2</commons.lang3.version>
         <commons.collections4.version>4.2</commons.collections4.version>
+        <commons.fileupload.version>1.3.3</commons.fileupload.version>
         <guava.version>20.0</guava.version>
+
+        <mybatis.version>1.3.1</mybatis.version>
+        <pagehelper.version>1.2.3</pagehelper.version>
+        <mysql.version>5.1.41</mysql.version>
+        <druid.version>1.1.9</druid.version>
+
+        <mongodb.driver.version>3.6.4</mongodb.driver.version>
     </properties>
 
     <dependencies>
