--- a/pom-common/pom.xml
+++ b/pom-common/pom.xml
@@ -18,6 +18,8 @@
         <lombok.version>1.18.6</lombok.version>
         <logback.version>1.2.3</logback.version>
         <commons.lang3.version>3.8.1</commons.lang3.version>
+        <commons.collections4.version>4.3</commons.collections4.version>
+        <guava.version>23.0</guava.version>
 
         <jdom.version>2.0.6</jdom.version>
         <dom4j.version>2.1.1</dom4j.version>
@@ -45,6 +47,16 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons.lang3.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections4</artifactId>
+                <version>${commons.collections4.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
