--- a/pom-spring-boot/pom.xml
+++ b/pom-spring-boot/pom.xml
@@ -12,12 +12,15 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.6.RELEASE</version>
+        <version>2.1.5.RELEASE</version>
         <relativePath/>
     </parent>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+
         <lombok.version>1.18.6</lombok.version>
         <commons.lang3.version>3.3.2</commons.lang3.version>
         <commons.collections4.version>4.2</commons.collections4.version>
