--- a/demo-java/pom.xml
+++ b/demo-java/pom.xml
@@ -60,13 +60,13 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
-            <version>2.6.2</version>
+            <version>${commons.pool2.version}</version>
         </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.30</version>
+            <version>${mysql.version}</version>
         </dependency>
 
     </dependencies>
