--- a/pom-common/pom.xml
+++ b/pom-common/pom.xml
@@ -19,7 +19,10 @@
         <logback.version>1.2.3</logback.version>
         <commons.lang3.version>3.8.1</commons.lang3.version>
         <commons.collections4.version>4.3</commons.collections4.version>
+        <commons.pool2.version>2.6.2</commons.pool2.version>
         <guava.version>23.0</guava.version>
+
+        <mysql.version>5.1.41</mysql.version>
 
         <jdom.version>2.0.6</jdom.version>
         <dom4j.version>2.1.1</dom4j.version>
