--- a/pom-common/pom.xml
+++ b/pom-common/pom.xml
@@ -20,7 +20,7 @@
         <commons.lang3.version>3.8.1</commons.lang3.version>
         <commons.collections4.version>4.3</commons.collections4.version>
         <commons.pool2.version>2.6.2</commons.pool2.version>
-        <guava.version>23.0</guava.version>
+        <guava.version>30.0-jre</guava.version>
 
         <mysql.version>5.1.41</mysql.version>
 
