--- a/pom-spring-boot/pom.xml
+++ b/pom-spring-boot/pom.xml
@@ -25,7 +25,7 @@
         <commons.lang3.version>3.3.2</commons.lang3.version>
         <commons.collections4.version>4.2</commons.collections4.version>
         <commons.fileupload.version>1.3.3</commons.fileupload.version>
-        <guava.version>23.0</guava.version>
+        <guava.version>30.0-jre</guava.version>
 
         <mybatis.version>1.3.1</mybatis.version>
         <pagehelper.version>1.2.3</pagehelper.version>
