--- a/demo-transform/pom.xml
+++ b/demo-transform/pom.xml
@@ -9,11 +9,17 @@
 
     <parent>
         <groupId>tk.gushizone</groupId>
-        <artifactId>pom-common</artifactId>
+        <artifactId>pom-spring-boot</artifactId>
+        <!--<artifactId>pom-common</artifactId>-->
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -58,6 +64,15 @@
             <artifactId>jackson-dataformat-xml</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+
+
+        <!--  EasyExcel  -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>${easyexcel.version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
