--- a/pom-common/pom.xml
+++ b/pom-common/pom.xml
@@ -27,6 +27,7 @@
         <jdom.version>2.0.6</jdom.version>
         <dom4j.version>2.1.1</dom4j.version>
         <jackson.version>2.10.0</jackson.version>
+        <easyexcel.version>2.2.6</easyexcel.version>
     </properties>
 
     <dependencyManagement>
