--- a/pom-spring-boot/pom.xml
+++ b/pom-spring-boot/pom.xml
@@ -33,6 +33,11 @@
         <druid.version>1.1.9</druid.version>
 
         <mongodb.driver.version>3.6.4</mongodb.driver.version>
+
+        <jdom.version>2.0.6</jdom.version>
+        <dom4j.version>2.1.1</dom4j.version>
+        <jackson.version>2.10.0</jackson.version>
+        <easyexcel.version>2.2.6</easyexcel.version>
     </properties>
 
     <dependencies>
