--- a/demo-springmvc/src/main/resources/application.yml
+++ b/demo-springmvc/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   servlet:
     multipart:
-      max-file-size: 2Mb
-      max-request-size: 20Mb
+      max-file-size: 2
+      max-request-size: 20
       resolve-lazily: true # 推迟文件解析，以便捕获文件大小异常
