--- a/demo-java/pom.xml
+++ b/demo-java/pom.xml
@@ -63,6 +63,13 @@
             <version>${commons.pool2.version}</version>
         </dependency>
 
+        <!-- https://github.com/alibaba/transmittable-thread-local -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+            <version>${ttl.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
