--- a/pom-common/pom.xml
+++ b/pom-common/pom.xml
@@ -21,6 +21,7 @@
         <commons.collections4.version>4.3</commons.collections4.version>
         <commons.pool2.version>2.6.2</commons.pool2.version>
         <guava.version>30.0-jre</guava.version>
+        <ttl.version>2.12.1</ttl.version>
 
         <mysql.version>5.1.41</mysql.version>
 
