--- a/demo-springmvc/pom.xml
+++ b/demo-springmvc/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
-            <version>${commons.fileupload.version}</version>
+            <version>${commons-fileupload.version}</version>
         </dependency>
     </dependencies>
 
