--- a/demo-java/pom.xml
+++ b/demo-java/pom.xml
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
-            <version>${commons.pool2.version}</version>
+            <version>${commons-pool2.version}</version>
         </dependency>
 
         <!-- https://github.com/alibaba/transmittable-thread-local -->
