--- a/demo-mongodb/pom.xml
+++ b/demo-mongodb/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver</artifactId>
-            <version>${mongodb.driver.version}</version>
+            <version>${mongodb-driver.version}</version>
         </dependency>
 
         <!-- spring-data-mongodb -->
