--- a/pom-spring-boot/pom.xml
+++ b/pom-spring-boot/pom.xml
@@ -22,9 +22,9 @@
         <java.version>1.8</java.version>
 
         <lombok.version>1.18.6</lombok.version>
-        <commons.lang3.version>3.3.2</commons.lang3.version>
-        <commons.collections4.version>4.2</commons.collections4.version>
-        <commons.fileupload.version>1.3.3</commons.fileupload.version>
+        <commons-lang3.version>3.3.2</commons-lang3.version>
+        <commons-collections4.version>4.2</commons-collections4.version>
+        <commons-fileupload.version>1.3.3</commons-fileupload.version>
         <guava.version>30.0-jre</guava.version>
 
         <mybatis.version>2.1.2</mybatis.version>
@@ -32,7 +32,7 @@
         <mysql.version>5.1.41</mysql.version>
         <druid.version>1.1.9</druid.version>
 
-        <mongodb.driver.version>3.6.4</mongodb.driver.version>
+        <mongodb-driver.version>3.6.4</mongodb-driver.version>
 
         <jdom.version>2.0.6</jdom.version>
         <dom4j.version>2.1.1</dom4j.version>
@@ -61,13 +61,13 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>${commons.lang3.version}</version>
+            <version>${commons-lang3.version}</version>
         </dependency>
         <!-- https://github.com/apache/commons-collections -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
-            <version>${commons.collections4.version}</version>
+            <version>${commons-collections4.version}</version>
         </dependency>
         <!--https://github.com/google/guava-->
         <dependency>
