--- a/pom-spring-boot/pom.xml
+++ b/pom-spring-boot/pom.xml
@@ -26,6 +26,7 @@
         <commons-collections4.version>4.2</commons-collections4.version>
         <commons-fileupload.version>1.3.3</commons-fileupload.version>
         <guava.version>30.0-jre</guava.version>
+        <hutool-all.version>5.7.9</hutool-all.version>
 
         <mybatis.version>2.1.2</mybatis.version>
         <pagehelper.version>1.2.3</pagehelper.version>
@@ -38,6 +39,8 @@
         <dom4j.version>2.1.1</dom4j.version>
         <jackson.version>2.10.0</jackson.version>
         <easyexcel.version>2.2.6</easyexcel.version>
+
+        <java-jwt.version>3.18.1</java-jwt.version>
     </properties>
 
     <dependencies>
@@ -74,6 +77,12 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool-all.version}</version>
         </dependency>
     </dependencies>
 
