--- a/demo-springmvc/pom.xml
+++ b/demo-springmvc/pom.xml
@@ -11,6 +11,7 @@
         <groupId>tk.gushizone</groupId>
         <artifactId>pom-spring-boot</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom-spring-boot</relativePath>
     </parent>
 
     <dependencies>
