--- a/pom-common/pom.xml
+++ b/pom-common/pom.xml
@@ -11,11 +11,13 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <compiler.version>3.1</compiler.version>
+        <compiler.version>3.8.1</compiler.version>
         <encoding>UTF-8</encoding>
 
         <junit.version>4.13.1</junit.version>
         <lombok.version>1.18.6</lombok.version>
+        <mapstruct.version>1.4.2.Final</mapstruct.version>
+
         <logback.version>1.2.3</logback.version>
         <commons-lang3.version>3.8.1</commons-lang3.version>
         <commons-collections4.version>4.3</commons-collections4.version>
