--- a/demo-spring/pom.xml
+++ b/demo-spring/pom.xml
@@ -15,6 +15,13 @@
 
 
     <dependencies>
+
+        <!-- AOP aspect -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+        </dependency>
+
         <!-- mybatis -->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
