--- a/demo-rabbitmq/pom.xml
+++ b/demo-rabbitmq/pom.xml
@@ -5,7 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>demo-rabbitmq</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
+    <modules>
+        <module>demo-rabbitmq-api</module>
+        <module>demo-rabbitmq-producer</module>
+        <module>demo-rabbitmq-consumer</module>
+    </modules>
 
     <parent>
         <groupId>tk.gushizone</groupId>
