--- a/demo-rabbitmq/demo-rabbitmq-consumer/src/main/resources/application.yml
+++ b/demo-rabbitmq/demo-rabbitmq-consumer/src/main/resources/application.yml
@@ -10,9 +10,9 @@ spring:
     password: guest
     virtual-host: /demo
     port: 5672
-    listener:
-      simple:
-        acknowledge-mode: manual # 消费者手动 ack
+#    listener:
+#      simple:                      # SimpleRabbitListenerContainerFactory
+#        acknowledge-mode: manual   # 消费者手动 ack
 #        concurrency: 1
 #        max-concurrency: 5
 
