--- a/pom-spring-boot/pom.xml
+++ b/pom-spring-boot/pom.xml
@@ -21,12 +21,16 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
 
+        <spring-boot.version>2.1.5.RELEASE</spring-boot.version>
+
         <lombok.version>1.18.6</lombok.version>
         <commons-lang3.version>3.3.2</commons-lang3.version>
         <commons-collections4.version>4.2</commons-collections4.version>
         <commons-fileupload.version>1.3.3</commons-fileupload.version>
         <guava.version>30.0-jre</guava.version>
         <hutool-all.version>5.7.9</hutool-all.version>
+
+        <disruptor.version>3.3.4</disruptor.version>
 
         <mybatis.version>2.1.2</mybatis.version>
         <pagehelper.version>1.2.3</pagehelper.version>
