--- a/demo-log/demo-log4j2/script/logstash.conf
+++ b/demo-log/demo-log4j2/script/logstash.conf
@@ -1,4 +1,4 @@
-# logstash -f $( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )/script/logstash.conf
+# logstash -f $PWD/script/logstash.conf
 
 # multiline 插件也可以用于其他类似的堆栈式信息，比如 linux 的内核日志。
 input {
