--- a/demo-java/pom.xml
+++ b/demo-java/pom.xml
@@ -11,7 +11,12 @@
         <groupId>tk.gushizone</groupId>
         <artifactId>pom-common</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom-common</relativePath>
     </parent>
+
+    <properties>
+        <hutool-all.version>5.7.9</hutool-all.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -83,6 +88,18 @@
             <version>${mysql.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool-all.version}</version>
+        </dependency>
+
+        <!-- kaptcha 验证码 -->
+        <dependency>
+            <groupId>com.github.penggle</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>2.3.2</version>
+        </dependency>
     </dependencies>
 
     <build>
