--- a/demo-spring/src/main/resources/application.yml
+++ b/demo-spring/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/demo?userUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://localhost:3306/demo?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
@@ -11,9 +11,15 @@ spring:
 
 mybatis:
   mapper-locations: classpath*:tk/gushizone/**/dao/*.xml,classpath*:mapper/*.xml
+#  configuration:
+#    local-cache-scope: session  # statement 一级缓存
+#    cache-enabled: false  # 这里是二级缓存
+
+
 
 logging:
   level:
+#    root: debug
     "tk.gushizone" : debug
 
 
