--- a/pom-spring-boot/pom.xml
+++ b/pom-spring-boot/pom.xml
@@ -7,6 +7,9 @@
     <groupId>tk.gushizone</groupId>
     <artifactId>pom-spring-boot</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>../demo-rocketmq</module>
+    </modules>
     <packaging>pom</packaging>
 
     <parent>
