--- a/demo-kafka/pom.xml
+++ b/demo-kafka/pom.xml
@@ -35,4 +35,20 @@
         </dependency>
     </dependencies>
 
+    <!--<dependencyManagement>-->
+    <!--    <dependencies>-->
+    <!--        <dependency>-->
+    <!--            <groupId>org.springframework.kafka</groupId>-->
+    <!--            <artifactId>spring-kafka</artifactId>-->
+    <!--            <version>2.8.0</version>-->
+    <!--        </dependency>-->
+    <!--        <dependency>-->
+    <!--            <groupId>org.apache.kafka</groupId>-->
+    <!--            <artifactId>kafka-clients</artifactId>-->
+    <!--            <version>3.0.0</version>-->
+    <!--            <scope>compile</scope>-->
+    <!--        </dependency>-->
+    <!--    </dependencies>-->
+    <!--</dependencyManagement>-->
+
 </project>
