--- a/pom-spring-boot/pom.xml
+++ b/pom-spring-boot/pom.xml
@@ -43,6 +43,7 @@
         <dom4j.version>2.1.1</dom4j.version>
         <jackson.version>2.10.0</jackson.version>
         <easyexcel.version>2.2.6</easyexcel.version>
+        <ttl.version>2.12.1</ttl.version>
 
         <java-jwt.version>3.18.1</java-jwt.version>
     </properties>
